--- a/consolasretro.html
+++ b/consolasretro.html
@@ -20,7 +20,7 @@
             <h2>¿Cuáles son las mejores consolas retro del mercado?</h2>
             <p>Al buscar consolas retro nos encontramos tanto las que vienen licenciadas originales por las marcas de antaño como otras que incorporan cientos de juegos. Ambas opciones pueden ser buenas, pero para facilitar tu elección hemos seleccionado únicamente las 8 mejores que encontrarás en el mercado:</p>
             <a name="titulo1"></a>
-            <h2>1. Consola retro Nintendo Super NES Classic Mini</h2>
+            <u>1. Consola retro Nintendo Super NES Classic Mini</u>
             <p>Sin duda esta es una de las mejores consolas retro que encontrarás en el mercado, y que es licenciada originalmente por Nintendo. Esta consola viene con un total de 21 juegos incorporados en la consola incluyendo clásicos de la talla de Super Mario World, Donkey Kong Country, Yoshi’s Island, Super Castrlevania IV o Mega Man X, entre otros. Tiene un catálogo muy amplio para que puedas disfrutar de grandes clásicos de la Super Nintendo en todo su esplendor.
 
                 Esta consola incluye Star Fox 1 y 2, pero para jugar al segundo, será necesario que se complete al menos la primera fase del juego original. Esta consola viene con su cable HDMI para conectarla fácilmente a tu TV, así como un cable USB de alimentación. No viene con adaptador de corriente incluido.
@@ -28,7 +28,7 @@
                 Son muchas las opiniones positivas las que tienen los usuarios que han comprado este modelo, asegurando que "es una buena consola, con el diseño original, pero ocupando poco espacio y con una muy buena selección de juegos". Por otra parte, destacan que "es un gran producto para coleccionismo, aunque los cables siguen siendo muy cortos, por lo que lo mejor es comprar unos extensores para jugar". Esta es la versión oficial de la Super Nintendo Mini, y que viene con clásicos de la consola.</p>
                 <img src="https://s.libertaddigital.com/2022/02/25/290/0/consola-retro-nintendo-super-nes-classic-mini.jpg" alt="NES">
                 <a name="titulo2"></a>
-                <h2>2. Consola retro Nintendo NES Classic Mini</h2>
+                <u>2. Consola retro Nintendo NES Classic Mini</u>
                 <p>Se trata de la versión de la consola de los 80 con un acabado renovado y más compacto, que te permitirá revivir momentos únicos. Esta consola viene con 30 juegos clásicos de la NES preinstalados, que pueden ser jugados en tu televisor HD. Además, esta consola incluye nuevas características disponibles en los juegos para que puedas disfrutar aún más de la experiencia.
 
                     Esta consola ofrece juegos clásicos incluidos en la misma como son Super Mario Bros, The Legend of Zelda, Metroid, Donkey Kong, PAC-MAN o Kirby’s Adventure, entre otros. La consola viene con un cable HDMI y un cable de alimentación USB, aunque el adaptador no viene incluido. El mando de esta consola también es compatible con la Nintendo Wii U, y puedes guardar el progreso en tus juegos de una forma mucho más sencilla. Por otra parte, también se puede comprar otro mando o utilizar un mando clásico para que puedas disfrutar aún más de la experiencia.
@@ -36,7 +36,7 @@
                     Quienes han comprado este modelo tienen opiniones muy positivas al respecto, asegurando que "es una increíble recreación de la NES original, y en la caja encontrarás todo lo necesario para empezar a jugar". También destacan que "es muy fácil de usar, la interfaz está muy trabajada, y se pueden guardar las partidas y seguir luego". Es una consola de muy buena calidad, aunque no se le pueden añadir más juegos y el cable de los controles es un poco corto.</p>
                     <img src="https://s.libertaddigital.com/2022/02/25/290/0/consola-retro-nintendo-nes-classic-mini.jpg" alt="nes Classic">
                     <a name="titulo3"></a>
-                    <h2>3. Consola retro Neo GEO SNK Mini</h2>
+                    <u>3. Consola retro Neo GEO SNK Mini</u>
                     <p>La Neo Geo es posiblemente la mejor consola arcade de todos los tiempos, y esta es una versión reducida de la original que está en formato mini, y que incorpora un total de 40 juegos clásicos. Viene con juegos clásicos como King of Fighters, Metal Slug, Fatal Fury y muchos más. Esta cuenta con una pantalla de 3,5 pulgadas, y con controles de barra de arcade clásicos, para disfrutar de los juegos igual que en su época.
 
                         Se puede utilizar con cualquier Power Bank, lo que la hace portátil, y se conecta fácilmente con su cable tipo C incluido. Además, esta se puede conectar a un televisor para disfrutar de tus juegos en una pantalla mucho más grande, gracias a que cuenta con una salida HDMI, aunque el cable no viene incluido con la consola. También se pueden conectar dos controladores adicionales, para que se pueda disfrutar de tus juegos favoritos con tus amigos.
@@ -44,7 +44,7 @@
                         Las reseñas que tienen los usuarios que han comprado esta consola, tienen opiniones muy positivas al respecto, asegurando que "el stick y los botones de la consola responden a la perfección, tiene un gran acabado, y se pueden comprar mandos, además de que viene con 40 y títulos instalados que lucen bien en su pantalla". Además, destacan que "es una consola bonita, con una buena emulación y con una buena selección de juegos". Es una consola perfecta si eres amante de la nostalgia.</p>
                         <img src="https://s.libertaddigital.com/2022/02/25/290/0/consola-retro-neo-geo-snk-mini.jpg" alt="neo">
                         <a name="titulo4"></a>
-                        <h2>4. Consola retro BIGFOX Game Stick Mini</h2>
+                        <u>4. Consola retro BIGFOX Game Stick Mini</u>
                         <p>Esta es una consola muy práctica que te permitirá disfrutar de todos tus juegos favoritos de antaño de forma muy cómoda. Viene en formato de Game Stick, lo que permitirá conectarla directamente en un puerto HDMI de tu televisor o proyector y conectar el cable de datos USB para que puedas comenzar a disfrutar de tus juegos favoritos en tu televisor.
 
                             Esta consola incluye dos controles inalámbricos que son réplicas del DualShock de PlayStation, y que se conectan con tecnología de 2.4GHz. Esto hace que la consola sea muy práctica, en especial porque no requiere de ningún cable para que puedas jugar. Esta consola también admite tarjeta TF, en la que vienen integrados alrededor de 3535 juegos, aunque algunos por limitaciones técnicas no se podrán ejecutar.
